Correções do .htaccess e atualização do README.md

--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,2 @@
-RewriteEgine On
-RewroteRule ^fale-conosco/?$ contatos.php [NC, L]
+RewriteEngine On
+RewriteRule ^fale-conosco/?$ contatos.php [NC,L]
